tests/baselines/reference/unusedLocalsInMethod3.errors.txt
tests/cases/compiler/unusedLocalsInMethod3.ts(3,13): error TS6133: 'x' is declared but never used.
tests/cases/compiler/unusedLocalsInMethod3.ts(3,16): error TS6133: 'y' is declared but never used.


==== tests/cases/compiler/unusedLocalsInMethod3.ts (2 errors) ====
    class greeter {
        public function1() {
            var x, y;
                ~
!!! error TS6133: 'x' is declared but never used.
                   ~
!!! error TS6133: 'y' is declared but never used.
            y = 1;
        }
    }